--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
+# Godot 4+ specific ignores
+.godot/
 
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
-
-# Mono-specific ignores
-.mono/
-data_*/
+# Visual Studio ignores
+.vs/
+*.csproj
+*.sln
